<resources>
    <string name="app_name">Shoes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="profile">Thông tin tài khoản</string>
    <string name="category">Danh mục sản phẩm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">Mã giảm giá</string>
    <string name="new_products">Sản phẩm mới</string>
    <string name="my_orders">Đơn hàng</string>
    <string name="my_carts">Giỏ hàng</string>
    <string name="chat">Chăm sóc khách hàng</string>
    <string name="logout">Đăng xuất</string>


    <string name="facebook_app_id">775498007185509</string>
    <string name="fb_login_protocol_scheme">fb775498007185509</string>
    <string name="facebook_client_token">4d26b06b33c7b82c437d545cf3c69105</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>